--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Deploy Frontend
+name: Test Frontend
 on:
   workflow_dispatch:
   push:
@@ -12,4 +12,9 @@ jobs:
       - uses: actions/checkout@v2
       - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - run: docker build -t kco04/docker-react -f Dockerfile.dev .
+
+  test:
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
       - run: docker run -e CI=true kco04/docker-react npm test
